tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_81.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((+ ((1223 DIV 1223) + (y * x))) + (((- 200) + (2 + y)) + (+ (x DIV y))));
               r := (((+ (z * z)) - ((+ 1) + (200 * 1223))) >= ((- (z * 200)) - (+ (- x))));
               z := ((((1 + 2) DIV (- y)) + ((- 200) + (+ 1223))) - (((2 - z) MOD (0 MOD 200)) DIV ((2 - y) MOD (y + 1223))));
               y := (- (((- 1223) DIV (y DIV 0)) - ((y + x) - (1223 - 2))));
               x := ((- ((- x) MOD (0 DIV 1))) MOD (((- 1) MOD (1223 DIV z)) - ((0 * 2) DIV (1 - z))));
  (* error *)  q := (((+ (r * 1223)) DIV (+ (1223 * x))) >= (((- x) DIV (+ 2)) * (- (1 + x))));
               x := (+ (((1 * y) MOD (+ 2)) DIV ((- y) * (2 - x))));
               z := ((+ (- (y DIV 1223))) MOD (((+ 2) + (z DIV x)) * (+ (0 - 2))));
               p := (((+ (z DIV 0)) + ((y * x) * (z - 0))) # (((1223 + 1) MOD (1 MOD 1223)) DIV ((- 1223) DIV (2 + 2))));
               y := ((((- 1) DIV (- 0)) + ((200 + 2) * (0 * x))) * (+ ((1 DIV z) + (- 200))))
END Test16.